--- a/client/package.json
+++ b/client/package.json
@@ -58,5 +58,5 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.22.11"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://zeckov2-deceb43992ac.herokuapp.com"
 }
