--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "start": "node server/server.js",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "cd client && npm install && npm run build",
+    "dev": "nodemon server/server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -18,6 +19,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.4.1",
     "helmet": "^7.2.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "memory-cache": "^0.2.0",
     "mongoose": "^6.12.3",
