--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -1,24 +1,50 @@
 {
   "compilerOptions": {
     "baseUrl": "src",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "paths": {
-      "*": ["*"]
+      "@components/*": ["components/*"],
+      "@pages/*": ["pages/*"],
+      "@services/*": ["services/*"],
+      "@utils/*": ["utils/*"],
+      "@hooks/*": ["hooks/*"],
+      "@contexts/*": ["contexts/*"],
+      "@styles/*": ["styles/*"],
+      "@assets/*": ["assets/*"]
     },
-    "module": "commonjs",
+    "module": "esnext",
     "target": "es6",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "noEmit": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "strict": true
+    "strict": true,
+    "moduleResolution": "node",
+    "incremental": true
   },
-  "include": ["src"],
+  "include": [
+    "src",
+    "src/**/*.js",
+    "src/**/*.jsx",
+    "src/**/*.ts",
+    "src/**/*.tsx"
+  ],
   "exclude": [
     "node_modules",
-    "build"
+    "build",
+    "dist",
+    "coverage",
+    ".next",
+    "out"
   ]
 }
 
