--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "chart.js": "^4.4.1",
     "react-chartjs-2": "^5.2.0",
     "date-fns": "^2.30.0",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "@mui/x-data-grid": "^6.18.7"
   },
   "scripts": {
     "start": "react-scripts start",
