--- a/client/package.json
+++ b/client/package.json
@@ -5,31 +5,31 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.0",
     "@mui/icons-material": "^5.14.0",
+    "@mui/material": "^5.14.0",
     "@mui/styles": "^5.14.0",
+    "@mui/x-data-grid": "^6.18.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.12.0",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.7",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4",
-    "framer-motion": "^10.16.4",
-    "qrcode.react": "^3.1.0",
-    "zxcvbn": "^4.4.2",
-    "chart.js": "^4.4.1",
-    "react-chartjs-2": "^5.2.0",
-    "date-fns": "^2.30.0",
-    "socket.io-client": "^4.7.2",
-    "@mui/x-data-grid": "^6.18.7"
+    "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
