--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "start": "node server/server.js",
-    "heroku-postbuild": "cd client && npm ci && npm run build",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd client && npm ci && CI=false npm run build",
     "dev": "nodemon server/server.js",
     "client": "cd client && npm start",
     "build": "cd client && npm run build"
