--- a/client/package.json
+++ b/client/package.json
@@ -3,37 +3,37 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.0",
-    "@mui/material": "^5.14.0",
-    "@mui/styles": "^5.14.0",
-    "@mui/x-data-grid": "^6.18.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "ajv": "^8.12.0",
-    "axios": "^1.6.2",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.10",
+    "@mui/material": "^6.1.10",
+    "@mui/styles": "^6.1.10",
+    "@mui/x-data-grid": "^7.23.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "ajv": "^8.17.1",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.7",
-    "date-fns": "^2.30.0",
-    "framer-motion": "^10.16.4",
-    "qrcode.react": "^3.1.0",
-    "react": "^18.2.0",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^11.13.1",
+    "qrcode.react": "^4.1.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
-    "react-icons": "^5.3.0",
-    "react-router-dom": "^6.20.0",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.3",
-    "socket.io-client": "^4.7.2",
-    "styled-components": "^5.3.11",
-    "web-vitals": "^2.1.4",
+    "react-toastify": "^10.0.6",
+    "socket.io-client": "^4.8.1",
+    "styled-components": "^6.1.13",
+    "web-vitals": "^4.2.4",
     "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "build": "set \"GENERATE_SOURCEMAP=false\" && set \"NODE_OPTIONS=--max_old_space_size=8192\" && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -60,9 +60,10 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.22.20",
+    "@babel/core": "^7.26.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-property-in-object": "^7.22.11"
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
+    "cross-env": "^7.0.3"
   },
   "proxy": "https://zeckov2-deceb43992ac.herokuapp.com"
 }
