--- a/package.json
+++ b/package.json
@@ -11,21 +11,18 @@
     "build": "cd client && npm run build"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.41.0",
-    "compression": "^1.7.4",
+    "express": "^4.17.1",
+    "mongoose": "^6.0.0",
+    "morgan": "^1.10.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.4.1",
-    "helmet": "^7.2.0",
-    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^10.0.0",
+    "compression": "^1.7.4",
+    "helmet": "^4.6.0",
+    "express-rate-limit": "^5.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "bcryptjs": "^2.4.3",
     "memory-cache": "^0.2.0",
-    "mongoose": "^7.6.3",
-    "nodemailer": "^6.9.7",
-    "socket.io": "^4.8.1",
-    "speakeasy": "^2.0.0",
-    "stripe": "^14.5.0"
+    "express-timeout-handler": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
