--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "zecko-platform",
   "version": "1.0.0",
+  "private": true,
   "engines": {
     "node": "18.x",
-    "npm": "9.x"
+    "npm": "8.19.3"
   },
   "scripts": {
     "start": "node server/server.js",
@@ -11,23 +12,17 @@
     "build": "cd client && npm run build"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^6.0.0",
-    "morgan": "^1.10.0",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "compression": "^1.7.4",
-    "helmet": "^4.6.0",
-    "express-rate-limit": "^5.3.0",
-    "jsonwebtoken": "^8.5.1",
-    "bcryptjs": "^2.4.3",
-    "memory-cache": "^0.2.0",
-    "express-timeout-handler": "^2.2.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.22.20",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-property-in-object": "^7.22.11",
-    "nodemon": "^3.0.1"
+    "express": "4.17.1",
+    "mongoose": "6.0.0",
+    "morgan": "1.10.0",
+    "cors": "2.8.5",
+    "dotenv": "10.0.0",
+    "compression": "1.7.4",
+    "helmet": "4.6.0",
+    "express-rate-limit": "5.3.0",
+    "jsonwebtoken": "8.5.1",
+    "memory-cache": "0.2.0",
+    "express-timeout-handler": "2.2.0",
+    "speakeasy": "2.0.0"
   }
 }
