--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "18.x",
-    "npm": "8.19.3"
+    "node": "20.x"
   },
   "scripts": {
     "start": "node server/server.js",
