--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "20.x"
+    "node": "18.20.5",
+    "npm": "9.9.3"
   },
   "scripts": {
     "start": "node server/server.js",
@@ -11,17 +12,22 @@
     "build": "cd client && npm run build"
   },
   "dependencies": {
-    "express": "4.17.1",
-    "mongoose": "6.0.0",
-    "morgan": "1.10.0",
-    "cors": "2.8.5",
-    "dotenv": "10.0.0",
-    "compression": "1.7.4",
-    "helmet": "4.6.0",
-    "express-rate-limit": "5.3.0",
-    "jsonwebtoken": "8.5.1",
-    "memory-cache": "0.2.0",
-    "express-timeout-handler": "2.2.0",
-    "speakeasy": "2.0.0"
+    "express": "^4.18.2",
+    "mongoose": "^6.12.3",
+    "morgan": "^1.10.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "compression": "^1.7.4",
+    "helmet": "^4.6.0",
+    "express-rate-limit": "^5.3.0",
+    "express-timeout-handler": "^2.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "validator": "^13.11.0",
+    "speakeasy": "^2.0.0",
+    "qrcode": "^1.5.3",
+    "memory-cache": "^0.2.0",
+    "connect-timeout": "^1.9.0"
   }
 }
