--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.0.2",
+    "react-router": "^6.20.0",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
     "socket.io-client": "^4.8.1",
@@ -33,7 +34,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
