--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": "9.x"
   },
   "scripts": {
-    "start": "node server/index.js",
+    "start": "node server/server.js",
     "server": "nodemon server/index.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
