--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "18.x",
-    "npm": "9.x"
+    "node": "18.20.5",
+    "npm": "10.2.5"
   },
   "scripts": {
     "start": "node server/server.js",
