--- a/package.json
+++ b/package.json
@@ -31,6 +31,18 @@
     "speakeasy": "^2.0.0",
     "qrcode": "^1.5.3",
     "memory-cache": "^0.2.0",
-    "connect-timeout": "^1.9.0"
+    "connect-timeout": "^1.9.0",
+    "stripe": "^12.0.0",
+    "aws-sdk": "^2.1.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.0",
+    "nodemailer": "^6.9.0",
+    "handlebars": "^4.7.8",
+    "date-fns": "^2.30.0",
+    "socket.io": "^4.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0",
+    "concurrently": "^8.0.0"
   }
 }
