--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
-    "framer-motion": "^11.13.1",
+    "framer-motion": "^11.15.0",
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -26,7 +26,9 @@
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "react-toastify": "^10.0.6",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^4.2.4",
