--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.15.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
