--- a/package.json
+++ b/package.json
@@ -15,34 +15,34 @@
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^6.12.3",
-    "morgan": "^1.10.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "aws-sdk": "^2.1.0",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
-    "helmet": "^4.6.0",
+    "connect-timeout": "^1.9.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^5.3.0",
     "express-timeout-handler": "^2.2.0",
+    "handlebars": "^4.7.8",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^9.0.0",
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
-    "validator": "^13.11.0",
-    "speakeasy": "^2.0.0",
-    "qrcode": "^1.5.3",
     "memory-cache": "^0.2.0",
-    "connect-timeout": "^1.9.0",
-    "stripe": "^12.0.0",
-    "aws-sdk": "^2.1.0",
+    "mongoose": "^6.12.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.0",
     "nodemailer": "^6.9.0",
-    "handlebars": "^4.7.8",
-    "date-fns": "^2.30.0",
-    "socket.io": "^4.7.0"
+    "qrcode": "^1.5.3",
+    "socket.io": "^4.7.0",
+    "speakeasy": "^2.0.0",
+    "stripe": "^12.0.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.0",
-    "concurrently": "^8.0.0"
+    "concurrently": "^8.0.0",
+    "nodemon": "^3.0.0"
   }
 }
