--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,8 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "react-toastify": "^10.0.6",
     "recharts": "^2.15.0",
     "slick-carousel": "^1.8.1",
