--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
+    "swiper": "^11.2.0",
     "web-vitals": "^4.2.4",
     "zxcvbn": "^4.4.2"
   },
