--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "docs": "jsdoc -c jsdoc.conf.json",
-    "prepare": "husky install"
+    "docs": "jsdoc -c jsdoc.conf.json"
   },
   "dependencies": {
     "aws-sdk": "^2.1.0",
@@ -74,7 +73,6 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jsdoc": "^4.0.2",
     "lint-staged": "^13.2.2",
@@ -82,11 +80,5 @@
     "prettier": "^2.8.8",
     "supertest": "^6.3.3",
     "webpack-bundle-analyzer": "^4.10.2"
-  },
-  "lint-staged": {
-    "*.{js,jsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ]
   }
 }
