--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "styled-components": "^6.1.13",
     "swiper": "^11.2.0",
     "web-vitals": "^4.2.4",
+    "webpack-bundle-analyzer": "^4.10.2",
     "zxcvbn": "^4.4.2"
   },
   "scripts": {
