--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-rate-limit": "^6.7.0",
     "express-timeout-handler": "^2.2.0",
     "express-validator": "^7.0.1",
+    "framer-motion": "^12.0.6",
     "handlebars": "^4.7.8",
     "helmet": "^4.6.0",
     "image-minimizer-webpack-plugin": "^4.1.3",
