--- a/client/package.json
+++ b/client/package.json
@@ -41,7 +41,8 @@
     "swiper": "^11.2.0",
     "web-vitals": "^4.2.4",
     "webpack-bundle-analyzer": "^4.10.2",
-    "zxcvbn": "^4.4.2"
+    "zxcvbn": "^4.4.2",
+    "react-hook-form": "^7.49.3"
   },
   "scripts": {
     "start": "craco start",
