--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cloudinary": "^1.21.0",
-    "compression": "^1.7.5",
+    "compression": "^1.7.4",
     "connect-timeout": "^1.9.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -52,6 +52,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.0",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.0",
     "pg-pool": "^3.7.0",
     "qrcode": "^1.5.3",
