--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "qrcode": "^1.5.3",
     "rate-limit-redis": "^3.0.1",
     "sharp": "^0.33.5",
+    "slugify": "^1.6.6",
     "socket.io": "^4.7.0",
     "speakeasy": "^2.0.0",
     "stripe": "^12.0.0",
