--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "date-fns": "^2.30.0",
-    "dompurify": "^3.2.3",
+    "dompurify": "^3.0.8",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
@@ -46,6 +46,7 @@
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-pngquant": "^10.0.0",
     "ioredis": "^5.3.2",
+    "jsdom": "^24.1.3",
     "jsonwebtoken": "^9.0.0",
     "memory-cache": "^0.2.0",
     "mongoose": "^6.12.3",
