--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "express-session": "^1.18.1",
     "express-timeout-handler": "^2.2.0",
     "express-validator": "^7.0.1",
     "framer-motion": "^12.0.6",
@@ -46,7 +47,7 @@
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-pngquant": "^10.0.0",
     "ioredis": "^5.3.2",
-    "jsdom": "^24.1.3",
+    "jsdom": "^24.0.0",
     "jsonwebtoken": "^9.0.0",
     "memory-cache": "^0.2.0",
     "mongoose": "^6.12.3",
