--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.20.3",
     "cloudinary": "^1.21.0",
     "compression": "^1.7.4",
+    "connect-redis": "^7.1.1",
     "connect-timeout": "^1.9.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -36,7 +37,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
-    "express-session": "^1.18.1",
+    "express-session": "^1.17.3",
     "express-timeout-handler": "^2.2.0",
     "express-validator": "^7.0.1",
     "framer-motion": "^12.0.6",
